--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: white;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   color: #434455;
 }
@@ -45,7 +45,7 @@ button {
 .adress-menu:hover {
   color: #404bbf;
 }
-.adress-menu:active {
+.adress-menu:focus {
   color: #404bbf;
 }
 .social {
@@ -61,6 +61,7 @@ button {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
 }
 .span-header-logo {
   color: #2e2f42;
@@ -90,7 +91,7 @@ button {
 .hero-button:hover {
   color: #404bbf;
 }
-.hero-button:active {
+.hero-button:focus {
   color: #404bbf;
 }
 /*information*/
@@ -152,6 +153,10 @@ button {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
+.portfolio {
+  background-color: #ffffff;
+}
+
 .portfolio-name {
   color: #2e2f42;
   font-weight: 500;
@@ -173,7 +178,7 @@ button {
 }
 
 .footer-logo {
-  color: #4d5ae5;
+  color: #f4f4fd;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
@@ -182,7 +187,7 @@ button {
   text-transform: uppercase;
 }
 .footer-logo-span {
-  color: #f4f4fd;
+  color: #4d5ae5;
 }
 .footer-text {
   font-size: 16px;
