--- a/css/styles.css
+++ b/css/styles.css
@@ -88,11 +88,9 @@ button {
   line-height: 1.5;
   letter-spacing: 0.04em;
 }
-.hero-button:hover {
-  background-color: #404bbf;
-}
+.hero-button:hover,
 .hero-button:focus {
-  background-color: #404bbf;
+  color: #404bbf;
 }
 /*section2 information*/
 
@@ -128,7 +126,7 @@ button {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
-.team-item {
+.team-list {
   background-color: #ffffff;
 }
 
