--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ button {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
-.team-list {
+.team-item {
   background-color: #ffffff;
 }
 
