--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ button {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
-.team-list {
+.team-item {
   background-color: #ffffff;
 }
 
