--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ button {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
 }
-.span-header-logo {
+.span-footer-logo {
   color: #f4f4fd;
 }
 .footer-text {
