--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ button {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
 }
-.span-header-logo {
+.header-logo-span {
   color: #2e2f42;
 }
 
