--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ button {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
 }
-.header-logo-span {
+.footer-logo-span {
   color: #f4f4fd;
 }
 .footer-text {
